--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "cra-template": "1.2.0",
     "heroicons": "^2.2.0",
     "react": "^18.3.1",
+    "react-alice-carousel": "^2.9.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1"
   },
