feat(frontend): prepare for production deployment - Update API configuration - Add environment variables - Improve error handling

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -18,7 +18,9 @@
 .env.test.local
 .env.production.local
 
+
 src/components/Navbar/Navigation.js
+./DEPLOYMENT.md
 
 npm-debug.log*
 yarn-debug.log*
